[package]
name = "swahili-dsl"
version = "0.1.3"
authors = ["Collins Muriuki <murerwacollins@gmail.com>"]
description = "An attempt at creating a Swahili-based DSL. Built for educational purposes."
repository = "https://github.com/collinsmuriuki/swahili-dsl"
readme = "README.md"
keywords = ["dsl"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
