[package]
name = "swahili-dsl"
version = "0.1.4"
authors = ["Collins Muriuki <murerwacollins@gmail.com>"]
description = "A Swahili-based DSL made for educational purposes."
repository = "https://github.com/collinsmuriuki/swahili-dsl"
readme = "README.md"
keywords = ["dsl"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
